Bug 737565 - Range.comparePoint() should throw exceptions per spec; r=smaug